# unicon_ws

./: CLAUDE.md
src/dynamixel_controller/: CMakeLists.txt  package.xml
src/dynamixel_controller/include/dynamixel_controller/: dynamixel_controller.hpp
src/dynamixel_controller/src/: dynamixel_controller.cpp
src/rogilinkFlex-ros2/: README.md
src/rogilinkFlex-ros2/rogilink_flex/: CMakeLists.txt  package.xml
src/rogilinkFlex-ros2/rogilink_flex/config/: config.json  config2.json
src/rogilinkFlex-ros2/rogilink_flex/include/rogilink_flex/: uart.hpp
src/rogilinkFlex-ros2/rogilink_flex/src/: uart.cpp  uart_node.cpp
src/rogilinkFlex-ros2/rogilink_flex_example_py/: package.xml  setup.cfg  setup.py
src/rogilinkFlex-ros2/rogilink_flex_example_py/launch/: example.launch.py
src/rogilinkFlex-ros2/rogilink_flex_example_py/rogilink_flex_example_py/: example_node.py
src/rogilinkFlex-ros2/rogilink_flex_gui/: package.xml  setup.cfg  setup.py
src/rogilinkFlex-ros2/rogilink_flex_gui/launch/: gui.launch.py
src/rogilinkFlex-ros2/rogilink_flex_gui/rogilink_flex_gui/: gui.py
src/rogilinkFlex-ros2/rogilink_flex_gui/rogilink_flex_gui/modules/: console.py  main_widget.py  reception_widget.py  style_sheet.py  transmission_widget.py
src/rogilinkFlex-ros2/rogilink_flex_interfaces/: CMakeLists.txt  package.xml
src/rogilinkFlex-ros2/rogilink_flex_interfaces/msg/: Frame.msg
src/rogilinkFlex-ros2/rogilink_flex_interfaces/srv/: GetConfig.srv  IsConnected.srv
src/rogilinkFlex-ros2/rogilink_flex_lib/: CMakeLists.txt  package.xml
src/rogilinkFlex-ros2/rogilink_flex_lib/include/rogilink_flex_lib/: Serializer.hpp  rogilink_flex_lib.hpp
src/rogilinkFlex-ros2/rogilink_flex_lib/rogilink_flex_lib/: __init__.py  rogilink_flex_lib.py
src/uniconlinkFlex/: CMakeLists.txt  README.md  package.xml
src/uniconlinkFlex/include/uniconlinkFlex/: memory_map.hpp  variant_converter.hpp
src/uniconlinkFlex/src/: memory_map.cpp  uniconlink_flex_node.cpp  variant_converter.cpp
src/uniconlink_flex_example_py/: package.xml  setup.cfg  setup.py
src/uniconlink_flex_example_py/uniconlink_flex_example_py/: example_node.py
src/uniconlink_flex_interfaces/: CMakeLists.txt  package.xml
src/uniconlink_flex_interfaces/msg/: UniconCommand.msg  UniconResponse.msg  VariantValue.msg
